--- a/packages/markmap-lib/package.json
+++ b/packages/markmap-lib/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "markmap-lib",
-  "version": "0.10.1",
+  "name": "@cc12703m/markmap-lib",
+  "version": "0.10.2",
   "description": "Visualize your Markdown as mindmaps with Markmap",
   "author": "Gerald <gera2ld@live.com>",
   "license": "MIT",
