--- a/packages/markmap-view/package.json
+++ b/packages/markmap-view/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "markmap-view",
-  "version": "0.1.1",
+  "name": "@cc12703m/markmap-view",
+  "version": "0.1.2",
   "description": "View markmaps in browser",
   "author": "Gerald <gera2ld@live.com>",
   "license": "MIT",
